--- a/Source/static/css/run_stage_definition.css
+++ b/Source/static/css/run_stage_definition.css
@@ -13,8 +13,13 @@
     margin-bottom: 30px;
 }
 
+.color-gray {
+    color: gray;
+}
+
 .extra-margin {
     margin-left: 26px;
+    margin-right: 26px;
 }
 
 .medium-icon {
@@ -30,7 +35,7 @@
 }
 
 .rightmost-control {
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 
 .green-control {
