--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -1,6 +1,8 @@
 {% extends "metadata_layout.html" %} {% block main_form_css %}
 <link rel="stylesheet" href="../static/css/run_stage_definition.css">
 <link rel="stylesheet" href="../static/css/draggable_list.css"> {% endblock %} {% block main_form %}
+<link rel="stylesheet" href="../static/css/progressBar.css">
+
 <div id="run_stage_div">
     <div class="form-inline">
         <h2 class="mx-auto stage-headline displayInline"> Run System Stage</h2>
@@ -137,11 +139,20 @@
         <div class="form-inline">
             <!-- <input type="checkbox" name="" id="delete_secnario">
                 <label for="delete_secnario">Delete after run</label> -->
-            <div class="form-check-inline ml-3">
-                <input type="checkbox" name="" id="generate_all_sub_folders">
-                <label class="form-check-label mt-1" for="generate_all_sub_folders" id="generate_all_sub_folders_label"><h5>Generate all sub folders?</h5></label>
+            <div class="form-inline  col-11">
+                <div class="form-check-inline ml-3">
+                    <input type="checkbox" name="" id="generate_all_sub_folders">
+                    <label class="form-check-label mt-1" for="generate_all_sub_folders" id="generate_all_sub_folders_label"><h5>Generate all sub folders?</h5></label>
+                </div>
+                <div id="msform" class="ml-auto col-7">
+                    <ul id="progressbar">
+                        <li id="InDB" class="active"><strong>inDB</strong></li>
+                        <li id="Generate" class="active"><strong>Generating</strong></li>
+                        <li id="Running"><strong>Running</strong></li>
+                        <li id="Finish"><strong>Finish</strong></li>
+                    </ul>
+                </div>
             </div>
-
         </div>
 
 
