--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -118,40 +118,49 @@
     <div class="generate_scenario_div extra-margin">
 
         <div class=" ml-3">
-            <label for="generate_scenario_folder" id="generate_scenario_folder_label"><h5>Ext. events folder</h5></label>
+            <label for="generate_scenario_folder" id="generate_scenario_folder_label"><h5 class="mt-2">Ext. events folder</h5></label>
 
-            <div class="row col-12">
-                <input list="scenario_folder_dl" type="text" name="" id="generate_scenario_folder" class="form-control col-5">
+            <div class="form-inline col-12">
+                <input list="scenario_folder_dl" type="text" name="" id="generate_scenario_folder" class="form-control col-4">
                 <datalist id="scenario_folder_dl">
                   <option value="scenarioFolder1"></option>
                   <option value="scenarioFolder2"></option>
                   <option value="scenarioFolder3"></option>
               </datalist>
-                <h6 style="font-style: italic; color: gray;" id="scenario_generated_at" class="ml-auto mt-2">Generated at: "root/Octopus_Scenario/" </h6>
-                <button class="btn btn-outline-primary ml-auto" id="btn_generate">Generate</button>
+                <div class="form-check-inline ml-3">
+                    <input type="checkbox" name="" id="generate_all_sub_folders">
+                    <label class="form-check-label mt-1" for="generate_all_sub_folders" id="generate_all_sub_folders_label"><h5>Generate all sub folders?</h5></label>
+                </div>
 
             </div>
 
         </div>
 
         <datalist id="scenario_file_dl">
-          </datalist>
+        </datalist>
+
+        <!-- <div>
+            <h6 style="font-style: italic; color: gray;" id="scenario_generated_at" class="ml-4 mt-4">Generated at: "root/Octopus_Scenario/" </h6>
+        </div> -->
+
         <div class="form-inline">
+            <h6 style="font-style: italic; color: gray;" id="scenario_generated_at" class="ml-4 mt-4">Generated at: "root/Octopus_Scenario/" </h6>
+
             <!-- <input type="checkbox" name="" id="delete_secnario">
                 <label for="delete_secnario">Delete after run</label> -->
-            <div class="form-inline  col-11">
-                <div class="form-check-inline ml-3">
-                    <input type="checkbox" name="" id="generate_all_sub_folders">
-                    <label class="form-check-label mt-1" for="generate_all_sub_folders" id="generate_all_sub_folders_label"><h5>Generate all sub folders?</h5></label>
-                </div>
+            <div class="form-inline col-12">
+
                 <div id="msform" class="ml-auto col-7">
                     <ul id="progressbar">
+                        <li id="Validate" class="active"><strong>Validate</strong></li>
                         <li id="InDB" class="active"><strong>inDB</strong></li>
                         <li id="Generate" class="active"><strong>Generating</strong></li>
                         <li id="Running"><strong>Running</strong></li>
                         <li id="Finish"><strong>Finish</strong></li>
                     </ul>
                 </div>
+                <button class="btn btn-outline-primary ml-auto mb-4" id="btn_generate">Generate</button>
+
             </div>
         </div>
 
@@ -185,7 +194,7 @@
     </div>
     <div class="marginCard extra-margin ">
 
-        <button id="run_stage" class="btn btn-outline-success ml-auto" style="float: right;"><i class="fas fa-chevron-circle-right"></i> &nbsp;Generate & Run</button>
+        <button id="run_stage" class="btn btn-outline-success ml-auto" style="float: right;"><i class="fas fa-chevron-circle-right mb-4"></i> &nbsp;Generate & Run</button>
     </div>
 
 </div>
