--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -298,5 +298,6 @@
 </div>
 {% endblock %} {% block main_form_scripts%}
 <script src="../static/js/run_stage_definition.js"></script>
+<script src="../static/js/GenerateWorker.js"></script>
 <script src="../static/js/draggble_list.js"></script>
 {% endblock %}
