--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -26,7 +26,7 @@
                 <option value="Site3"></option>
             </select>
         </div>
-        <div class="col-5">
+        <div class="col-6">
             <label for="site_config"><h5>Configuration</h5> </label>
             <div class="form-inline">
                 <select name="" id="site_config" class="form-control col-8">
@@ -36,7 +36,7 @@
               </select>
                 <a hidden="hidden" href="" role="button" class="displayInline" data-toggle="tooltip" data-placement="top" title=""><i class="far fa-eye samll-margin"></i></a>
                 <a hidden="hidden" href="" role="button" class="displayInline"><i class="fas fa-network-wired samll-margin"></i></a>
-                <button class="btn btn-secondary btn-sm rightmost-control small-margin" data-toggle="modal" data-target="#Adnvaced_defintions_modal">
+                <button class="btn btn-secondary btn-sm rightmost-control small-margin ml-4" data-toggle="modal" data-target="#Adnvaced_defintions_modal">
                     <i class="fas fa-arrow-right"></i><h6>&NonBreakingSpace; Advanced</h6></button>
             </div>
         </div>
@@ -115,36 +115,36 @@
         <label class="form-check-label mt-1" for="delete_secnario" id="delete_secnario_label"><h5>Delete scenario after run?&nbsp;)</h5></label>
     </div>
 
-    <div class="generate_scenario_div extra-margin">
+    <div class="generate_scenario_div extra-margin mt-2">
 
         <div class=" ml-3">
-            <label for="generate_scenario_folder" id="generate_scenario_folder_label"><h5>Ext. events folder</h5></label>
+            <label for="generate_scenario_folder" id="generate_scenario_folder_label"><h5 class = "mt-2">Ext. events folder</h5></label>
 
             <div class="row col-12">
-                <input list="scenario_folder_dl" type="text" name="" id="generate_scenario_folder" class="form-control col-5">
+                <input list="scenario_folder_dl" type="text" name="" id="generate_scenario_folder" class="form-control col-4">
                 <datalist id="scenario_folder_dl">
                   <option value="scenarioFolder1"></option>
                   <option value="scenarioFolder2"></option>
                   <option value="scenarioFolder3"></option>
               </datalist>
-                <h6 style="font-style: italic; color: gray;" id="scenario_generated_at" class="ml-auto mt-2">Generated at: "root/Octopus_Scenario/" </h6>
-                <button class="btn btn-outline-primary ml-auto" id="btn_generate">Generate</button>
-
-            </div>
-
-        </div>
-
-        <datalist id="scenario_file_dl">
-          </datalist>
-        <div class="form-inline">
-            <!-- <input type="checkbox" name="" id="delete_secnario">
-                <label for="delete_secnario">Delete after run</label> -->
-            <div class="form-inline  col-11">
                 <div class="form-check-inline ml-3">
                     <input type="checkbox" name="" id="generate_all_sub_folders">
                     <label class="form-check-label mt-1" for="generate_all_sub_folders" id="generate_all_sub_folders_label"><h5>Generate all sub folders?</h5></label>
                 </div>
-                <div id="msform" class="ml-auto col-7">
+            </div>
+
+        </div>
+        <datalist id="scenario_file_dl">
+        </datalist>
+        
+
+        <div class="form-inline">
+            <h6 style="font-style: italic; color: gray;" id="scenario_generated_at" class="ml-auto mt-2">Generated at: "root/Octopus_Scenario/" </h6>
+            <!-- <input type="checkbox" name="" id="delete_secnario">
+                <label for="delete_secnario">Delete after run</label> -->
+            <div class="form-inline  col-7">
+                
+                <div id="msform" class="ml-auto mr-auto col-8">
                     <ul id="progressbar">
                         <li id="InDB" class="active"><strong>inDB</strong></li>
                         <li id="Generate" class="active"><strong>Generating</strong></li>
@@ -153,6 +153,9 @@
                     </ul>
                 </div>
             </div>
+            
+            <button class="btn btn-outline-primary ml-auto mr-5" id="btn_generate">Generate</button>
+
         </div>
 
 
@@ -185,7 +188,7 @@
     </div>
     <div class="marginCard extra-margin ">
 
-        <button id="run_stage" class="btn btn-outline-success ml-auto" style="float: right;"><i class="fas fa-chevron-circle-right"></i> &nbsp;Generate & Run</button>
+        <button id="run_stage" class="btn btn-outline-success ml-auto mb-3 mr-3" style="float: right;"><i class="fas fa-chevron-circle-right"></i> &nbsp;Generate & Run</button>
     </div>
 
 </div>
